Completed bulletin scraper (no test yet)

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
     "presets": ["env"],
     "plugins": [
       "transform-class-properties",
-      "transform-object-rest-spread"
+      "transform-object-rest-spread",
+      "transform-runtime"
     ]
   }
   
