--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "@babel/core": "^7.1.5",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "bcrypt": "^3.0.2",
     "dotenv": "^6.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
     "moment": "^2.22.2",
     "puppeteer": "^1.10.0",
+    "query-string": "^6.2.0",
     "restify": "^7.2.2",
     "restify-cors-middleware": "^1.1.1",
     "restify-oauth-server": "^0.2.0",
@@ -34,7 +38,7 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
     "editorconfig": "^0.15.2",
     "eslint": "^5.9.0",
